--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
+    "@types/react": "^16.9.19",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -26,8 +27,9 @@
     "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "react-native-vector-icons": "^6.6.0"
   },
   "private": true
 }
