--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/stack": "^5.0.0",
     "@types/react": "^16.9.19",
     "expo": "~36.0.0",
+    "expo-font": "~8.0.0",
+    "firebase": "^7.10.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -24,8 +26,7 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
-    "react-navigation-tabs": "^2.7.0",
-    "expo-font": "~8.0.0"
+    "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
