--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-qrcode": "^0.2.7",
+    "react-native-qrcode-svg": "^6.0.3",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-svg": "9.13.3",
+    "react-native-svg": "^9.13.3",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "7.4.3",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0"
