--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-native-webview": "7.4.3",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation-tabs": "^2.7.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
