--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/stack": "^5.0.0",
     "@types/react": "^16.9.19",
     "expo": "~36.0.0",
+    "expo-barcode-scanner": "~8.0.0",
     "expo-font": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "firebase": "^7.10.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -22,6 +24,7 @@
     "react-native-indicators": "^0.17.0",
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-svg": "^6.0.3",
+    "react-native-raw-bottom-sheet": "^2.1.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
@@ -33,8 +36,7 @@
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "expo-permissions": "~8.0.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
