--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-constants": "latest",
+    "expo-image-picker": "~8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
