--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react": "^16.9.19",
     "expo": "~36.0.0",
     "expo-barcode-scanner": "~8.0.0",
+    "expo-constants": "latest",
     "expo-font": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
     "expo-permissions": "~8.0.0",
     "firebase": "^7.10.0",
     "react": "~16.9.0",
@@ -22,6 +24,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-indicators": "^0.17.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-svg": "^6.0.3",
     "react-native-raw-bottom-sheet": "^2.1.0",
@@ -36,9 +39,7 @@
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "expo-constants": "latest",
-    "expo-image-picker": "~8.0.1"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
