--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@types/react": "^16.9.19",
+    "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-barcode-scanner": "~8.0.0",
     "expo-constants": "latest",
