--- a/package.json
+++ b/package.json
@@ -47,5 +47,10 @@
     "babel-preset-expo": "~8.0.0",
     "react-native-vector-icons": "^6.6.0"
   },
-  "private": true
+  "private": true,
+  "bit": {
+    "env": {},
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "npm"
+  }
 }
