--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-linear-gradient": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
