--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-constants": "latest",
     "expo-font": "~8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-linear-gradient": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "firebase": "^7.10.0",
     "react": "~16.9.0",
@@ -40,8 +41,7 @@
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "expo-linear-gradient": "~8.0.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
