--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "expo": "~36.0.0",
     "expo-barcode-scanner": "~8.0.0",
+    "expo-blur": "~8.0.0",
     "expo-constants": "latest",
     "expo-font": "~8.0.0",
     "expo-image-picker": "~8.0.1",
@@ -24,6 +25,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
