--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.19",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-av": "~8.0.0",
     "expo-barcode-scanner": "~8.0.0",
     "expo-blur": "~8.0.0",
     "expo-constants": "latest",
@@ -29,6 +30,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-indicators": "^0.17.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-masked-text": "^1.13.0",
     "react-native-mime-types": "^2.3.0",
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-svg": "^6.0.3",
@@ -44,8 +46,7 @@
     "react-navigation-stack": "^2.1.1",
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "expo-av": "~8.0.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
